infra/kubernetes/base/security/namespace-psa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-mall
  labels:
    app.kubernetes.io/part-of: bank-mall
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
