infra/kubernetes/base/security/allow-jaeger-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-monitoring
  namespace: jaeger
spec:
  podSelector:
    matchLabels:
      app: jaeger
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: monitoring
    ports:
    - protocol: TCP
      port: 16686
  - from:
    - namespaceSelector:
        matchLabels:
          name: bank-mall
    ports:
    - protocol: TCP
      port: 4317
    - protocol: TCP
      port: 4318
