infra/kubernetes/base/security/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bank-mall-deny-all
  namespace: bank-mall
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
